# oi-build-firmware

./: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
data/: Makefile.am  dropbear_dss_host_key  dropbear_rsa_host_key
data/fontconfig/: 060b3d7dc2a62f7f41318bab229e8705-mipsel-ip-linux-gnu.cache-3  0fdfe5ca58fd9bc9e4fc72abcd5bc429-mipsel-ip-linux-gnu.cache-2  0fdfe5ca58fd9bc9e4fc72abcd5bc429-mipsel-ip-linux-gnu.cache-3  2efe4266d4dba8bb16a9c22d58c7e9d9-mipsel-ip-linux-gnu.cache-3  3047814df9a2f067bd2d96a2b9c36e5a-mipsel-ip-linux-gnu.cache-2  3047814df9a2f067bd2d96a2b9c36e5a-mipsel-ip-linux-gnu.cache-3  3830d5c3ddfd5cd38a049b759396e72e-mipsel-ip-linux-gnu.cache-2  3830d5c3ddfd5cd38a049b759396e72e-mipsel-ip-linux-gnu.cache-3  3f7329c5293ffd510edef78f73874cfd-mipsel-ip-linux-gnu.cache-2  3f7329c5293ffd510edef78f73874cfd-mipsel-ip-linux-gnu.cache-3  7ef2298fde41cc6eeb7af42e48b7d293-mipsel-ip-linux-gnu.cache-2  7ef2298fde41cc6eeb7af42e48b7d293-mipsel-ip-linux-gnu.cache-3  8c03c3a6c9d07847bc4551394e412260-mipsel-ip-linux-gnu.cache-3  Makefile.am  d589a48862398ed80a3d6066f4f56f4c-mipsel-ip-linux-gnu.cache-2  d589a48862398ed80a3d6066f4f56f4c-mipsel-ip-linux-gnu.cache-3
debian/: changelog  control  copyright  rules
logo/: Makefile.am
scripts/: Makefile.am  Makefile.in  build-OI-on-SD-v3  build-fw  build-prs505  build-v3  mkinitramfs  mkinitramfs-v3  mkrootfs.ext2  pack-firmware
src/: Makefile.am  Makefile.in  config.h.in  mkv3update.c
