AC_PREREQ(2.57)
AC_INIT(oi-build-firmware, 0.1, openinkpot-developers@googlegroups.com)
AM_INIT_AUTOMAKE(foreign)

AC_CONFIG_HEADER(src/config.h)

AC_PROG_CC
AM_PROG_CC_STDC
AM_PROG_CC_C_O
AC_HEADER_STDC
AC_CHECK_HEADERS([inttypes.h])

AC_OUTPUT([
Makefile
src/Makefile
scripts/Makefile
logo/Makefile
])
